# scPD

./: .gitignore  CLUSTERING_OPTIMIZATION.md  CONTRIBUTING.md  LICENSE  PRE_RELEASE_CHECKLIST.md  README.md  README_REVIEW.md  pyproject.toml
.github/workflows/: tests.yml
docs/: ipsc_serum_demo.md  paul15_demo.md  synthetic_time_series_demo.md
examples/: ipsc_serum_demo.py  paul15_demo.py  synthetic_time_series_demo.py
outputs/ipsc/: scpd_result.npz
outputs/paul15/: result.npz
outputs/synthetic_time_series/: result.npz
src/scpd/: __init__.py  gpu_clustering.py  grid.py  likelihood.py  optimize.py  pde.py  plotting.py  preprocess.py  regularization.py  results.py  solver.py  spline.py  synthetic.py  utils.py
tests/: __init__.py  test_adistance_basic.py  test_fit_recovery_synthetic.py  test_landmarking_rules.py  test_pde_mass_conservation.py  test_spline_basis_shapes.py
